@@ -2,7 +2,7 @@
  <name>epsonepl</name>
  <url>http://sourceforge.net/projects/epsonepl/</url>
  <execution>
-  <filter />
+  <ijs />
   <prototype></prototype>
   <ppdentry>
    *DefaultResolution: 1200x600dpi
