@@ -3,7 +3,7 @@
  <url>http://gimp-print.sourceforge.net/</url>
  <obsolete replace="gutenprint" />
  <execution>
-  <filter />
+  <cups />
   <prototype />
  </execution>
  <comments>
