@@ -2,7 +2,7 @@
  <name>gutenprint</name>
  <url>http://gimp-print.sourceforge.net/</url>
  <execution>
-  <filter />
+  <cups />
   <prototype></prototype>
  </execution>
  <comments>
