@@ -2,7 +2,7 @@
  <name>lxx74</name>
  <url>http://home.online.no/~enrio/</url>
  <execution>
-  <ghostscript />
+  <cups />
  </execution>
  <comments>
   <en>
