@@ -2,7 +2,7 @@
  <name>pxljr</name>
  <url>http://hp-pxl-jetready.sourceforge.net/</url>
  <execution>
-  <filter />
+  <ijs />
   <prototype></prototype>
  </execution>
  <comments>
