@@ -2,7 +2,7 @@
  <name>rastertokmXXXXdl</name>
  <url>http://printer.konicaminolta.com/support/index_ds.html</url>
  <execution>
-  <filter />
+  <cups />
   <prototype></prototype>
  </execution>
  <comments>
