@@ -2,7 +2,7 @@
  <name>splix</name>
  <url>http://splix.ap2c.org/</url>
  <execution>
-  <filter />
+  <cups />
   <prototype></prototype>
  </execution>
  <comments>
