@@ -1,3 +1,9 @@
+2007-02-06  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/epsonepl.xml, driver/gimp-print.xml, driver/gutenprint.xml,
+          driver/lxx74.xml, driver/pxljr.xml, driver/rastertokmXXXXdl.xml,
+	  driver/splix.xml: Improved specification of driver type.
+
 2007-01-24  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_1320.xml:
